src/OpenCvSharpExtern/imgproc.h

CVAPI(ExceptionStatus) imgproc_integral1(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* sum,
    int sdepth)
{
    return cvTry([&] {
        cv::integral(InProxy(*src), OutProxy(*sum), sdepth);
    });
}
CVAPI(ExceptionStatus) imgproc_integral2(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* sum,
    const interop::OutputArrayProxy* sqsum,
    int sdepth)
{
    return cvTry([&] {
        cv::integral(InProxy(*src), OutProxy(*sum), OutProxy(*sqsum), sdepth);
    });
}
CVAPI(ExceptionStatus) imgproc_integral3(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* sum,
    const interop::OutputArrayProxy* sqsum,
    const interop::OutputArrayProxy* tilted,
    int sdepth,
    int sqdepth)
{
    return cvTry([&] {
        cv::integral(InProxy(*src), OutProxy(*sum), OutProxy(*sqsum), OutProxy(*tilted), sdepth, sqdepth);
    });
}
CVAPI(ExceptionStatus) imgproc_accumulate(
    const interop::InputArrayProxy* src,
    const interop::InputOutputArrayProxy* dst,
    const interop::InputArrayProxy* mask)
{
    return cvTry([&] {
        cv::accumulate(InProxy(*src), IoProxy(*dst), InProxy(*mask));
    });
}
CVAPI(ExceptionStatus) imgproc_accumulateSquare(
    const interop::InputArrayProxy* src,
    const interop::InputOutputArrayProxy* dst,
    const interop::InputArrayProxy* mask)
{
    return cvTry([&] {
        cv::accumulateSquare(InProxy(*src), IoProxy(*dst), InProxy(*mask));
    });
}
CVAPI(ExceptionStatus) imgproc_accumulateProduct(
    const interop::InputArrayProxy* src1,
    const interop::InputArrayProxy* src2,
    const interop::InputOutputArrayProxy* dst,
    const interop::InputArrayProxy* mask)
{
    return cvTry([&] {
        cv::accumulateProduct(InProxy(*src1), InProxy(*src2), IoProxy(*dst), InProxy(*mask));
    });
}
CVAPI(ExceptionStatus) imgproc_accumulateWeighted(
    const interop::InputArrayProxy* src,
    const interop::InputOutputArrayProxy* dst,
    double alpha,
    const interop::InputArrayProxy* mask)
{
    return cvTry([&] {
        cv::accumulateWeighted(InProxy(*src), IoProxy(*dst), alpha, InProxy(*mask));
    });
}
CVAPI(ExceptionStatus) imgproc_phaseCorrelate(
    const interop::InputArrayProxy* src1,
    const interop::InputArrayProxy* src2,
    const interop::InputArrayProxy* window,
    double* response,
    interop::Point2d* returnValue)
{
    return cvTry([&] {
        const auto p = cv::phaseCorrelate(InProxy(*src1), InProxy(*src2), InProxy(*window), response);
        *returnValue = { p.x, p.y };
    });
}
CVAPI(ExceptionStatus) imgproc_createHanningWindow(
    const interop::OutputArrayProxy* dst,
    interop::Size winSize,
    int type)
{
    return cvTry([&] {
        cv::createHanningWindow(OutProxy(*dst), cpp(winSize), type);
    });
}
CVAPI(ExceptionStatus) imgproc_threshold(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    double thresh,
    double maxVal,
    int type,
    double *returnValue)
{
    return cvTry([&] {
        *returnValue = cv::threshold(InProxy(*src), OutProxy(*dst), thresh, maxVal, type);
    });
}
CVAPI(ExceptionStatus) imgproc_adaptiveThreshold(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    double maxValue,
    int adaptiveMethod,
    int thresholdType,
    int blockSize,
    double C)
{
    return cvTry([&] {
        cv::adaptiveThreshold(InProxy(*src), OutProxy(*dst), maxValue, adaptiveMethod, thresholdType, blockSize, C);
    });
}
CVAPI(ExceptionStatus) imgproc_pyrDown(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    interop::Size dstSize,
    int borderType)
{
    return cvTry([&] {
        cv::pyrDown(InProxy(*src), OutProxy(*dst), cpp(dstSize), borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_pyrUp(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    interop::Size dstSize,
    int borderType)
{
    return cvTry([&] {
        cv::pyrUp(InProxy(*src), OutProxy(*dst), cpp(dstSize), borderType);
    });
}
CVAPI(ExceptionStatus) imgproc_calcBackProject(
    cv::Mat **images,
    int nimages,
    const int* channels,
    const interop::InputArrayProxy* hist,
    const interop::OutputArrayProxy* backProject,
    const float** ranges,
    int uniform)
{
    return cvTry([&] {
        std::vector<cv::Mat> imagesVec(nimages);
        for (auto i = 0; i < nimages; i++)
            imagesVec[i] = *(images[i]);
        cv::calcBackProject(&imagesVec[0], nimages, channels, InProxy(*hist), OutProxy(*backProject), ranges, uniform != 0);
    });
}
CVAPI(ExceptionStatus) imgproc_equalizeHist(const interop::InputArrayProxy* src, const interop::OutputArrayProxy* dst)
{
    return cvTry([&] {
        cv::equalizeHist(InProxy(*src), OutProxy(*dst));
    });
}
CVAPI(ExceptionStatus) imgproc_EMD(
    const interop::InputArrayProxy* signature1,
    const interop::InputArrayProxy* signature2,
    int distType,
    const interop::InputArrayProxy* cost,
    float* lowerBound,
    const interop::OutputArrayProxy* flow,
    float* returnValue)
{
    return cvTry([&] {
        *returnValue = cv::EMD(InProxy(*signature1), InProxy(*signature2), distType, InProxy(*cost), lowerBound, OutProxy(*flow));
    });
}
CVAPI(ExceptionStatus) imgproc_watershed(const interop::InputArrayProxy* image, const interop::InputOutputArrayProxy* markers)
{
    return cvTry([&] {
        cv::watershed(InProxy(*image), IoProxy(*markers));
    });
}
CVAPI(ExceptionStatus) imgproc_pyrMeanShiftFiltering(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    double sp,
    double sr,
    int maxLevel,
    interop::TermCriteria termCrit)
{
    return cvTry([&] {
        cv::pyrMeanShiftFiltering(InProxy(*src), OutProxy(*dst), sp, sr, maxLevel, cpp(termCrit));
    });
}
CVAPI(ExceptionStatus) imgproc_grabCut(
    const interop::InputArrayProxy* img,
    const interop::InputOutputArrayProxy* mask,
    interop::Rect rect,
    const interop::InputOutputArrayProxy* bgdModel,
    const interop::InputOutputArrayProxy* fgdModel,
    int iterCount,
    int mode)
{
    return cvTry([&] {
        cv::grabCut(InProxy(*img), IoProxy(*mask), cpp(rect), IoProxy(*bgdModel), IoProxy(*fgdModel), iterCount, mode);
    });
}
CVAPI(ExceptionStatus) imgproc_distanceTransformWithLabels(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    const interop::OutputArrayProxy* labels,
    int distanceType,
    int maskSize,
    int labelType)
{
    return cvTry([&] {
        cv::distanceTransform(InProxy(*src), OutProxy(*dst), OutProxy(*labels), distanceType, maskSize, labelType);
    });
}
CVAPI(ExceptionStatus) imgproc_distanceTransform(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int distanceType,
    int maskSize,
    int dstType)
{
    return cvTry([&] {
        cv::distanceTransform(InProxy(*src), OutProxy(*dst), distanceType, maskSize, dstType);
    });
}
CVAPI(ExceptionStatus) imgproc_floodFill1(
    const interop::InputOutputArrayProxy* image,
    interop::Point seedPoint,
    interop::Scalar newVal,
    interop::Rect *rect,
    interop::Scalar loDiff,
    interop::Scalar upDiff,
    int flags,
    int *returnValue)
{
    return cvTry([&] {
        cv::Rect rect0;
        *returnValue = cv::floodFill(IoProxy(*image), cpp(seedPoint), cpp(newVal), &rect0, cpp(loDiff), cpp(upDiff), flags);
        *rect = c(rect0);
    });
}
CVAPI(ExceptionStatus) imgproc_floodFill2(
    const interop::InputOutputArrayProxy* image,
    const interop::InputOutputArrayProxy* mask,
    interop::Point seedPoint,
    interop::Scalar newVal,
    interop::Rect *rect,
    interop::Scalar loDiff,
    interop::Scalar upDiff,
    int flags,
    int* returnValue)
{
    return cvTry([&] {
        cv::Rect rect0;
        *returnValue = cv::floodFill(IoProxy(*image), IoProxy(*mask), cpp(seedPoint), cpp(newVal), &rect0, cpp(loDiff), cpp(upDiff), flags);
        *rect = c(rect0);
    });
}
CVAPI(ExceptionStatus) imgproc_cvtColor(
    const interop::InputArrayProxy* src,
    const interop::OutputArrayProxy* dst,
    int code,
    int dstCn,
    int hint)
{
    return cvTry([&] {
        cv::cvtColor(InProxy(*src), OutProxy(*dst), code, dstCn, static_cast<cv::AlgorithmHint>(hint));
    });
}
CVAPI(ExceptionStatus) imgproc_moments(
    const interop::InputArrayProxy* arr,
    int binaryImage,
    interop::Moments *returnValue)
{
    return cvTry([&] {
        const auto m = cv::moments(InProxy(*arr), binaryImage != 0);
        *returnValue = c(m);
    });
}
/*
CVAPI(ExceptionStatus) imgproc_HuMoments(interop::Moments *moments, double hu[7])
{
    return cvTry([&] {
    cv::HuMoments(cpp(*moments), hu);
    });
}
*/
CVAPI(ExceptionStatus) imgproc_matchTemplate(
    const interop::InputArrayProxy* image,
    const interop::InputArrayProxy* templ,
    const interop::OutputArrayProxy* result,
    int method,
    const interop::InputArrayProxy* mask)
{
    return cvTry([&] {
        cv::matchTemplate(InProxy(*image), InProxy(*templ), OutProxy(*result), method, InProxy(*mask));
    });
}
CVAPI(ExceptionStatus) imgproc_connectedComponents(
    const interop::InputArrayProxy* image,
    const interop::OutputArrayProxy* labels,
    int connectivity,
    int ltype,
    int *returnValue)
{
    return cvTry([&] {
        *returnValue = cv::connectedComponents(InProxy(*image), OutProxy(*labels), connectivity, ltype);
    });
}
CVAPI(ExceptionStatus) imgproc_connectedComponentsWithStats(
    const interop::InputArrayProxy* image,
    const interop::OutputArrayProxy* labels,
    const interop::OutputArrayProxy* stats,
    const interop::OutputArrayProxy* centroids,
    int connectivity,
    int ltype,
    int* returnValue)
{
    return cvTry([&] {
        *returnValue = cv::connectedComponentsWithStats(
            InProxy(*image), OutProxy(*labels), OutProxy(*stats), OutProxy(*centroids), connectivity, ltype);
    });
}
CVAPI(ExceptionStatus) imgproc_findContours1_vector(
    const interop::InputArrayProxy* image,
    std::vector<std::vector<cv::Point> > *contours,
    std::vector<cv::Vec4i> *hierarchy,
    int mode,
    int method,
    interop::Point offset)
{
    return cvTry([&] {
        cv::findContours(InProxy(*image), *contours, *hierarchy, mode, method, cpp(offset));
    });
}
CVAPI(ExceptionStatus) imgproc_findContours1_OutputArray(
    const interop::InputArrayProxy* image,
    std::vector<cv::Mat> *contours,
    const interop::OutputArrayProxy* hierarchy,
    int mode,
    int method,
    interop::Point offset)
{
    return cvTry([&] {
        cv::findContours(InProxy(*image), *contours, OutProxy(*hierarchy), mode, method, cpp(offset));
    });
}
CVAPI(ExceptionStatus) imgproc_findContours2_vector(
    const interop::InputArrayProxy* image,
    std::vector<std::vector<cv::Point> > *contours,
    int mode,
    int method,
    interop::Point offset)
{
    return cvTry([&] {
        cv::findContours(InProxy(*image), *contours, mode, method, cpp(offset));
    });
}
CVAPI(ExceptionStatus) imgproc_findContours2_OutputArray(
    const interop::InputArrayProxy* image,
    std::vector<cv::Mat> *contours,
    int mode,
    int method,
    interop::Point offset)
{
    return cvTry([&] {
        cv::findContours(InProxy(*image), *contours, mode, method, cpp(offset));
    });
}
CVAPI(ExceptionStatus) imgproc_drawContours_vector(
    const interop::InputOutputArrayProxy* image,
    cv::Point **contours,
    int contoursSize1,
    int *contoursSize2,
    int contourIdx,
    interop::Scalar color,
    int thickness,
    int lineType,
    cv::Vec4i *hierarchy,
    int hiearchyLength,
    int maxLevel,
    interop::Point offset)
{
    return cvTry([&] {
        std::vector<std::vector<cv::Point> > contoursVec;
        for (auto i = 0; i < contoursSize1; i++)
        {
            std::vector<cv::Point> c1(contours[i], contours[i] + contoursSize2[i]);
            contoursVec.push_back(c1);
        }
        std::vector<cv::Vec4i> hierarchyVec;
        if (hierarchy != nullptr)
        {
            hierarchyVec = std::vector<cv::Vec4i>(hierarchy, hierarchy + hiearchyLength);
        }

        cv::drawContours(
            IoProxy(*image), contoursVec, contourIdx, cpp(color), thickness, lineType, hierarchyVec, maxLevel, cpp(offset));
    });
}
CVAPI(ExceptionStatus) imgproc_drawContours_InputArray(
    const interop::InputOutputArrayProxy* image,
    cv::Mat **contours,
    int contoursLength,
    int contourIdx,
    interop::Scalar color,
    int thickness,
    int lineType,
    const interop::InputArrayProxy* hierarchy,
    int maxLevel,
    interop::Point offset)
{
    return cvTry([&] {
        std::vector<std::vector<cv::Point> > contoursVec(contoursLength);
        for (auto i = 0; i < contoursLength; i++)
            contoursVec[i] = *contours[i];
        cv::drawContours(
            IoProxy(*image), contoursVec, contourIdx, cpp(color), thickness, lineType, InProxy(*hierarchy), maxLevel, cpp(offset));
    });
}